attempts to load the classes

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     ],
     "require": {
         "renegat59/glicerine": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "glicerineexample\\": "src"
+        }
     }
 }
